// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`license config > defaultLicenseConfig > should generate default license config for ASL 1`] = `
{
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.                                                      ",
        "                                                                                                                 ",
        "Licensed under the Amazon Software License (the "License"). You may not use this file except in compliance       ",
        "with the License. A copy of the License is located at                                                            ",
        "                                                                                                                 ",
        "   https://aws.amazon.com/asl/                                                                                   ",
        "                                                                                                                 ",
        "or in the "license" file accompanying this file. This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES",
        "OR CONDITIONS OF ANY KIND, express or implied. See the License for the specific language governing permissions   ",
        "and limitations under the License.                                                                               ",
      ],
    },
    "exclude": [],
    "format": {
      "**/*.{js,ts}": {
        "blockEnd": " **********************************************************************************************************************/",
        "blockStart": "/**********************************************************************************************************************",
        "lineEnd": " *",
        "lineStart": " *  ",
      },
      "**/*.{py,sh}": {
        "blockEnd": "######################################################################################################################",
        "blockStart": "######################################################################################################################",
        "lineEnd": " #",
        "lineStart": "#  ",
      },
    },
  },
}
`;

exports[`license config > defaultLicenseConfig > should generate default license config for Apache-2.0 1`] = `
{
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.",
        "SPDX-License-Identifier: Apache-2.0",
      ],
    },
    "exclude": [],
    "format": {
      "**/*.{js,ts}": {
        "blockEnd": " */",
        "blockStart": "/**",
        "lineStart": " * ",
      },
      "**/*.{py,sh}": {
        "blockEnd": "# ",
        "blockStart": "# ",
        "lineStart": "# ",
      },
    },
  },
}
`;

exports[`license config > defaultLicenseConfig > should generate default license config for MIT 1`] = `
{
  "header": {
    "content": {
      "lines": [
        "Copyright Test Inc. or its affiliates. All Rights Reserved.",
        "SPDX-License-Identifier: MIT",
      ],
    },
    "exclude": [],
    "format": {
      "**/*.{js,ts}": {
        "blockEnd": " */",
        "blockStart": "/**",
        "lineStart": " * ",
      },
      "**/*.{py,sh}": {
        "blockEnd": "# ",
        "blockStart": "# ",
        "lineStart": "# ",
      },
    },
  },
}
`;
